fix - user and messages routes
[Fixes #164351273]
